update some css & video part

--- a/fronted/src/pages/Channel/index.module.scss
+++ b/fronted/src/pages/Channel/index.module.scss
@@ -137,14 +137,15 @@
     color: dimgray;
   }
 
-  .span_click {
-    color: #333;
-    cursor: pointer;
-  }
-  .span:hover {
-    color: #333;
-    cursor: pointer;
-  }
+.span_click {
+  color: rgb(250, 113, 50);
+  cursor: pointer;
+}
+
+.span:hover {
+  color: rgb(250, 113, 50);
+  cursor: pointer;
+}
 }
 
 
